--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
         html{
             height: 100%;
         }
+       /* メディアクエリは外に書く！ */
+@media (max-width: 767px) {
+    #css {
+        width: auto;
+    }
+}
         body {
             display: flex;
             flex-direction: column;
